--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -26,12 +26,12 @@
     {% endif %}
     {% for post in page_obj %}
       <article>
-        {% include "includes/article.html" %}
+        {% include "posts/includes/article.html" %}
       </article>
         {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
     <div class="container">
-      {% include "includes/paginator.html" %}
+      {% include "posts/includes/paginator.html" %}
     </div>
   </div>
 {% endblock content %}
