--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -5,19 +5,19 @@
   {% endblock title %}
   {% block content %}
     {% if request.user.is_authenticated %}
-      {% include 'includes/switcher.html' %}
+      {% include 'posts/includes/switcher.html' %}
     {% endif %}
     {% load cache %}
       {% cache 20 index_page %}
       <div class="container py-5">
         {% for post in page_obj %}
-          <article>{% include "includes/article.html" %}</article>
+          <article>{% include "posts/includes/article.html" %}</article>
           {% if not forloop.last %}<hr>{% endif %}
         {% endfor %}
       </div>
       {% endcache %}
       <div class="container">
-        {% include "includes/paginator.html" %}
+        {% include "posts/includes/paginator.html" %}
       </div>
   {% endblock content %}
 {% endwith %}
